# ChangeLog for sys-apps/v86d
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/sys-apps/cvs-repo/gentoo-x86/sys-apps/v86d/ChangeLog,v 1.10 2007/12/28 14:42:32 spock Exp $

*v86d-0.1.3-r1 (28 Dec 2007)

  28 Dec 2007; Michał Januszewski <spock@gentoo.org> +v86d-0.1.3-r1.ebuild:
  Add the 'x86emu' USE flag to make it possible to fix problems similar to the
  ones described in #196848.

  05 Dec 2007; Christoph Mende <angelos@gentoo.org> v86d-0.1.3.ebuild:
  Stable on amd64 wrt bug #200994

  04 Dec 2007; Christian Faulhammer <opfer@gentoo.org> v86d-0.1.3.ebuild:
  stable x86, bug 200994

*v86d-0.1.3 (03 Dec 2007)

  03 Dec 2007; Michał Januszewski <spock@gentoo.org> +v86d-0.1.3.ebuild:
  Version bump. Bugfix release -- fixes broken handling of cards which store
  the VBE Info Block in the Video ROM.

  04 Nov 2007; Michał Januszewski <spock@gentoo.org> -v86d-0.1_rc4.ebuild,
  -v86d-0.1_rc5.ebuild:
  Remove old ebuilds.

*v86d-0.1.2 (04 Nov 2007)

  04 Nov 2007; Michał Januszewski <spock@gentoo.org> +v86d-0.1.2.ebuild:
  Version bump.

*v86d-0.1.1 (22 Oct 2007)

  22 Oct 2007; Michał Januszewski <spock@gentoo.org> +v86d-0.1.1.ebuild:
  Version bump.

*v86d-0.1_rc5 (07 Aug 2007)

  07 Aug 2007; Michał Januszewski <spock@gentoo.org> +v86d-0.1_rc5.ebuild:
  Version bump.

  05 Aug 2007; Michał Januszewski <spock@gentoo.org> v86d-0.1_rc4.ebuild:
  Remove the dependency on sys-libs/lrmi.

*v86d-0.1_rc4 (26 Jul 2007)

  26 Jul 2007; Michał Januszewski <spock@gentoo.org> +metadata.xml,
  +v86d-0.1_rc4.ebuild:
  Initial commit.
