@@ -1,17 +1,7 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST v86d-0.1.1.tar.bz2 66968 RMD160 d7cedc6e42d0b7df455a7aa099d1290abd521000 SHA1 7646b726a25f3233c7251746cb3fbcc992223f41 SHA256 c3f8361dcbcfa263c61528218deaa865896b20be7030cd490caf4f94839e2e5b
-DIST v86d-0.1.2.tar.bz2 67275 RMD160 b598b7a28639ea7c99e9cbabe85d9e6dce5f69ca SHA1 25855752837dd0d2e6a895dd21db0b7c7a4d2150 SHA256 f12e6d9520665d96e78146a7926a8ac179f508ffbf775688d8174109e77f3751
 DIST v86d-0.1.3.tar.bz2 67044 RMD160 717aa7b043979bc9aa3fd702bd656fa9c473dcd8 SHA1 372b20cc10e8435343b05dc197d30721eb3faa61 SHA256 bf0ca221bc5e8a6b06f73a1eb6ae1470ec5b34b987669f7abeb499e6402af3b0
-EBUILD v86d-0.1.1.ebuild 1226 RMD160 b35aed3aac529da6eabae1506332b48661bf2724 SHA1 8937af7d2f1ac4c0f834303a157f264c7700fc0e SHA256 8f07b96f3f4d64d4a99f6b23b68de3b514f69c79fdad9f19c3d8b2ff2acb1b8d
-MD5 ac5a4e7a09222bb13d591eaaca6ab81b v86d-0.1.1.ebuild 1226
-RMD160 b35aed3aac529da6eabae1506332b48661bf2724 v86d-0.1.1.ebuild 1226
-SHA256 8f07b96f3f4d64d4a99f6b23b68de3b514f69c79fdad9f19c3d8b2ff2acb1b8d v86d-0.1.1.ebuild 1226
-EBUILD v86d-0.1.2.ebuild 1242 RMD160 fa33508738aa180ef33098c29e91f542702a4b8e SHA1 4d28a1f8a3a38f20af1bfae0fa9ed585b25c6d9b SHA256 60c4b1364fbce5782a338e0c8c8d54232217940f043fc1809f9f976271dc895e
-MD5 7c02a271e1dc38a2da6e2603d2732888 v86d-0.1.2.ebuild 1242
-RMD160 fa33508738aa180ef33098c29e91f542702a4b8e v86d-0.1.2.ebuild 1242
-SHA256 60c4b1364fbce5782a338e0c8c8d54232217940f043fc1809f9f976271dc895e v86d-0.1.2.ebuild 1242
 EBUILD v86d-0.1.3-r1.ebuild 1331 RMD160 26ab6503c6de531d5c5edf9dc4c4957b9a294824 SHA1 85a7ab00af71b3b4413dcf42b2bfb3b2f76570de SHA256 3dc4dceb653ef73c91c6ee3522ed911eda0d00d2a9aaa96e3516739ed1be305b
 MD5 37874dc9d5fef1297566a966bc17bf67 v86d-0.1.3-r1.ebuild 1331
 RMD160 26ab6503c6de531d5c5edf9dc4c4957b9a294824 v86d-0.1.3-r1.ebuild 1331
@@ -20,20 +10,14 @@ EBUILD v86d-0.1.3.ebuild 1242 RMD160 eb8a7af1cf6b929d08a089bce9b71468afc3ddf3 SH
 MD5 052751e493833978c4ca19955d6104a9 v86d-0.1.3.ebuild 1242
 RMD160 eb8a7af1cf6b929d08a089bce9b71468afc3ddf3 v86d-0.1.3.ebuild 1242
 SHA256 600bc21d249ee194e93a4e9ddd019b05b4bbfc6c92c9b59d61bb09e75c486c11 v86d-0.1.3.ebuild 1242
-MISC ChangeLog 1579 RMD160 3d09934cef7992639a24d446de7d7c0024ba7ec0 SHA1 e7326c556c4511aaf47b279d9700db6c356c2177 SHA256 87369fdc54d09907371d027d1a508f5ce3b76670bd893c7ff8bd1c6664201934
-MD5 3eacb4318af918b78948f652f003b771 ChangeLog 1579
-RMD160 3d09934cef7992639a24d446de7d7c0024ba7ec0 ChangeLog 1579
-SHA256 87369fdc54d09907371d027d1a508f5ce3b76670bd893c7ff8bd1c6664201934 ChangeLog 1579
+MISC ChangeLog 1698 RMD160 323099baeece2e690d95b9947e495b922900dd64 SHA1 290cf636bf4a554074af138490eeea5ca8275f3b SHA256 5f7d2c2149535a8ccb0acaff30f84498acaf6e3d6fbca3d9bfe015eea84e5670
+MD5 68d4cf4952681bd5327208ad058b7012 ChangeLog 1698
+RMD160 323099baeece2e690d95b9947e495b922900dd64 ChangeLog 1698
+SHA256 5f7d2c2149535a8ccb0acaff30f84498acaf6e3d6fbca3d9bfe015eea84e5670 ChangeLog 1698
 MISC metadata.xml 220 RMD160 6bb03cb6947aadf2672a58c61c1fb7aa405eaf86 SHA1 7810907f03c5a3ee23eeaa4b42699ce17bc5c3a7 SHA256 969b4125e7620e2fe0d616cb3cabbe52bd79e6c4bdd725ce807d5f4c7c1ad75d
 MD5 87131e5c56922624f8a0c7fe61cd28da metadata.xml 220
 RMD160 6bb03cb6947aadf2672a58c61c1fb7aa405eaf86 metadata.xml 220
 SHA256 969b4125e7620e2fe0d616cb3cabbe52bd79e6c4bdd725ce807d5f4c7c1ad75d metadata.xml 220
-MD5 d459b89722ff2a71c2b1915b69914286 files/digest-v86d-0.1.1 232
-RMD160 8c7500a5782efb3bb3a007a797c3145ea8def53b files/digest-v86d-0.1.1 232
-SHA256 e0014cc4590381b7ad7fad9bb827df6f0c05f8450ed1ae3b843fec50f4d9d6a6 files/digest-v86d-0.1.1 232
-MD5 0a4ce16890af7cac694614d22b58a30f files/digest-v86d-0.1.2 232
-RMD160 dc4c3d7a7be9b996c3efc9983bc487b105c47784 files/digest-v86d-0.1.2 232
-SHA256 9acb1a8784bd9801cf7c78e3e4c1a5516150f9efac0e71ea511abf656359aa5a files/digest-v86d-0.1.2 232
 MD5 28d1aa671b3481251448dbcf4d0a8c81 files/digest-v86d-0.1.3 232
 RMD160 9bab7d76e35f22829cae7a1d6ca4aa451134bb31 files/digest-v86d-0.1.3 232
 SHA256 eb109bec5860558cf9c69272c65624e1dc88f1a2d541c88a8d39243e322318af files/digest-v86d-0.1.3 232
@@ -43,7 +27,7 @@ SHA256 eb109bec5860558cf9c69272c65624e1dc88f1a2d541c88a8d39243e322318af files/di
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.8 (GNU/Linux)
 
-iEYEARECAAYFAkd1C24ACgkQchej4aZK9/cILgCcCTm3uMRrO5UFlKnpz3isv/mK
-7ncAn2hXxVIz9UBfwO+8cfx6Zgro0dcK
-=krqM
+iEYEARECAAYFAkd1DDQACgkQchej4aZK9/fOFgCfYZ6C8kkaB+Jcgx3m1HFmY6JV
+chAAnAyLmWHuxNmxeLY17RKBrTJDQeLf
+=7muc
 -----END PGP SIGNATURE-----
