@@ -1,3 +1,0 @@
-MD5 d018f2d78d661e63b28db0a52bfc7aae v86d-0.1.1.tar.bz2 66968
-RMD160 d7cedc6e42d0b7df455a7aa099d1290abd521000 v86d-0.1.1.tar.bz2 66968
-SHA256 c3f8361dcbcfa263c61528218deaa865896b20be7030cd490caf4f94839e2e5b v86d-0.1.1.tar.bz2 66968
