@@ -1,3 +1,0 @@
-MD5 d0a5acd4a6cba31328160992a30c9e67 v86d-0.1.2.tar.bz2 67275
-RMD160 b598b7a28639ea7c99e9cbabe85d9e6dce5f69ca v86d-0.1.2.tar.bz2 67275
-SHA256 f12e6d9520665d96e78146a7926a8ac179f508ffbf775688d8174109e77f3751 v86d-0.1.2.tar.bz2 67275
